2010-03-07  OpenPrinting Web Server <webmaster@openprinting.org>

	* db/source/driver/test-4.xml: TODO: Upload comment, submitted by till

	* db/source/driver/test-5.xml: TODO: Upload comment, submitted by till

	* db/source/printer/Test-XX100.xml: dfgfggfs fsdsdsdf, submitted by
	  till

	* db/source/printer/Test-XX200.xml: ttytytytrr, submitted by till

	* db/source/printer/Test-XX400.xml:  ,mcxm,, submitted by till

	* db/source/printer/Test-XX500.xml: mnjkl, submitted by till

	* db/source/printer/Test-XX700.xml: asdfasdf, submitted by till

	* db/source/printer/Brother-HL-2030.xml,
	  db/source/printer/Brother-HL-2035.xml:
	  New entries added to the MySQL database.

	* db/source/driver/gutenprint.xml:
	  Entries modified in the MySQL database.

2010-02-25  Till Kamppeter <till.kamppeter@gmail.com>

	* driver/gutenprint.xml: Updated to represent version 5.2.5.

2010-02-17  OpenPrinting Web Server <webmaster@openprinting.org>

	* db/source/driver/cljet5.xml,
	  db/source/opt/PCL-4-5-InputSlot.xml,
	  db/source/opt/PCL-XL-InputSlot.xml,
	  db/source/printer/Brother-PT-2300.xml,
	  db/source/printer/Canon-LBP-3360.xml,
	  db/source/printer/HP-LaserJet_1022.xml,
	  db/source/printer/HP-LaserJet_1022n.xml,
	  db/source/printer/HP-LaserJet_1022nw.xml,
	  db/source/printer/Samsung-CLP-610ND.xml:
	  Entries modified in the MySQL database.

2010-02-16  Till Kamppeter <till.kamppeter@gmail.com>

	* driver/bjc600.xml, driver/bjc800.xml: Removed workaround
	  against crash of Ghostscript 8.63 with PDF input.

	* driver/cljet5.xml, driver/laserjet.xml, driver/lj4dith.xml,
	  driver/lj4dithp.xml, driver/ljet2p.xml, driver/ljet3.xml,
	  driver/ljet3d.xml, driver/ljet4.xml, driver/ljet4d.xml,
	  driver/ljetplus.xml, driver/pxl1010.xml, driver/pxlcolor.xml,
	  driver/pxldpl.xml, driver/pxlmono.xml, driver/lj5gray.xml,
	  opt/PCL-4-5-InputSlot.xml, opt/PCL-XL-InputSlot.xml: Removed the
	  ugly Perl workarounds to implement paper tray selection for the