@@ -1,16 +1,0 @@
-<driver id="driver/test-4">
-  <name>test-4</name>
-  <url>uuuuu</url>
-  <supplier>dsadsaasddsaads</supplier>
-  <thirdpartysupplied />
-  <license>GPLv3</license>
-  <supportcontacts>
-    <supportcontact url="fdfddffd" level="voluntary">ffsfdsfds</supportcontact>
-  </supportcontacts>
-  <shortdescription>
-    <en>dsadsadsadsad</en>
-  </shortdescription>
-  <execution>
-    <cups />
-  </execution>
-</driver>
