@@ -1,16 +1,0 @@
-<driver id="driver/test-5">
-  <name>test-5</name>
-  <url>jfdkjfdflkja</url>
-  <supplier>dsakjdsa</supplier>
-  <thirdpartysupplied />
-  <license>GPLv2</license>
-  <supportcontacts>
-    <supportcontact url="dskdsamlk" level="voluntary">cxnsn</supportcontact>
-  </supportcontacts>
-  <shortdescription>
-    <en>dsajksjddslkj</en>
-  </shortdescription>
-  <execution>
-    <cups />
-  </execution>
-</driver>
