@@ -1,5 +1,0 @@
-<printer id="printer/Test-XX100">
-  <make>Test</make>
-  <model>XX100</model>
-  <functionality>F</functionality>
-</printer>
