@@ -1,5 +1,0 @@
-<printer id="printer/Test-XX200">
-  <make>Test</make>
-  <model>XX200</model>
-  <functionality>F</functionality>
-</printer>
