@@ -1,5 +1,0 @@
-<printer id="printer/Test-XX400">
-  <make>Test</make>
-  <model>XX400</model>
-  <functionality>F</functionality>
-</printer>
