@@ -1,22 +1,0 @@
-<printer id="printer/Test-XX500">
-  <make>Test</make>
-  <model>XX500</model>
-  <functionality>F</functionality>
-  <driver>test-2</driver>
-  <drivers>
-    <driver>
-      <id>test-1</id>
-      <comments>
-        <en>111</en>
-      </comments>
-      <ppd>111.ppd</ppd>
-    </driver>
-    <driver>
-      <id>test-2</id>
-      <comments>
-        <en>222</en>
-      </comments>
-      <ppd>222.ppd</ppd>
-    </driver>
-  </drivers>
-</printer>
