@@ -1,20 +1,0 @@
-<printer id="printer/Test-XX700">
-  <make>Test</make>
-  <model>XX700</model>
-  <functionality>F</functionality>
-  <driver>pxlcolor</driver>
-  <drivers>
-    <driver>
-      <id>hpijs-pcl5c</id>
-      <comments>
-        <en>600 dpi</en>
-      </comments>
-    </driver>
-    <driver>
-      <id>pxlcolor</id>
-      <comments>
-        <en>1200 dpi</en>
-      </comments>
-    </driver>
-  </drivers>
-</printer>
