@@ -1,5 +1,16 @@
 2010-03-07  OpenPrinting Web Server <webmaster@openprinting.org>
 
+	* db/source/driver/test-4.xml,
+	  db/source/driver/test-5.xml,
+	  db/source/printer/Test-XX100.xml,
+	  db/source/printer/Test-XX200.xml,
+	  db/source/printer/Test-XX400.xml,
+	  db/source/printer/Test-XX500.xml,
+	  db/source/printer/Test-XX700.xml:
+	  Entries removed from the MySQL database.
+
+2010-03-07  OpenPrinting Web Server <webmaster@openprinting.org>
+
 	* db/source/driver/test-4.xml: TODO: Upload comment, submitted by till
 
 	* db/source/driver/test-5.xml: TODO: Upload comment, submitted by till
